# agent-browser

./: .gitignore  AGENTS.md  SESSION.md  pyproject.toml
.codex/: testing.md
.codex/memory/: failure_patterns.md  journal.archive.jsonl  journal.jsonl
.codex/specs/001-prd-runtime-foundation/: context.md  tasks.md
.codex/specs/001-prd-runtime-foundation/harness/: feature_list.json  progress.md
.codex/specs/attic/: INDEX.md
.codex/specs/attic/001-prd-runtime-foundation/: context.md  design.md  requirements.md  smoke-tests.md  tasks.md  verification.md
.codex/specs/attic/001-prd-runtime-foundation/harness/: progress.md
.codex/templates/: bug-analysis-template.md  bug-report-template.md  bug-verification-template.md  decisions-template.md  design-template.md  failure-patterns-template.md  requirements-template.md  spec-verification-template.md  tasks-template.md
.pi/: presets.json  settings.json
.pi/skills/soundcloud-outreach/: SKILL.md  engine.py  exclusions.yaml  recover_sent.py
.pi/skills/soundcloud-outreach/state/: .gitignore  sent_history.json
scripts/: sc-outreach-daily.sh
src/agent_browser/: __init__.py  cli.py  config.py  handlers.py  tasks.py
src/agent_browser/storage/: __init__.py  db.py  repositories.py
steering/: decisions.md  product.md  structure.md  tech.md
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py  test_storage.py  test_tasks.py
